Added possibilities container

--- a/html/index.html
+++ b/html/index.html
@@ -72,10 +72,10 @@
 			</div>
 		</div>
 	</section>
-	<section class="possibilites-container">
+	<section class="possibilities-container">
 		<div class="possibilities-content container">
 			<div class="possibilities-item">
-				<img src="" alt="">
+				<img src="../images/shipping_icon.png" alt="Shipping">
 				<div class="possibilities-text">
 					<h3>
 						FREE WORLWIDE SHIPPING
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="possibilities-item">
-				<img src="" alt="">
+				<img src="../images/moneyback_icon.png" alt="Money back">
 				<div class="possibilities-text">
 					<h3>
 						MONEY BACK GUARANTEE
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<div class="possibilities-item">
-				<img src="" alt="">
+				<img src="../images/secure_icon.png" alt="Secure">
 				<div class="possibilities-text">
 					<h3>
 						SECURE ONLINE PAYMENT
