--- a/html/index.html
+++ b/html/index.html
@@ -19,56 +19,92 @@
 					<span></span>
 				</label>
 				<div class="menu-box">
-					<a class="menu-item" href="#">Ingredients</a>
-					<a class="menu-item" href="#">About Us</a>
-					<a class="menu-item" href="#">My account</a>
+					<a class="menu-item" href="#">
+						Ingredients
+					</a>
+					<a class="menu-item" href="#">
+						About Us
+					</a>
+					<a class="menu-item" href="#">
+						My account
+					</a>
 				</div>
 			</div>
 			<div class="logo-container">
 				<img src="../images/logo.png" alt="Logo">
-				<span>PURE<span>SKIN</span></span>
+				<span>
+					PURE
+					<span>
+						SKIN
+					</span>
+				</span>
 			</div>
 			<div class="right-header-container">
 				<div class="menu-container">
-					<a class="normal-menu" href="#">Ingredients</a>
-					<a class="normal-menu" href="#">About Us</a>
-					<a class="normal-menu" href="#">My account</a>
+					<a class="normal-menu" href="#">
+						Ingredients
+					</a>
+					<a class="normal-menu" href="#">
+						About Us
+					</a>
+					<a class="normal-menu" href="#">
+						My account
+					</a>
 				</div>
 				<div class="basket-container">
 					<img src="../images/basket.png" alt="Basket">
 					<div class="count">
-						<span>2</span>
+						<span>
+							2
+						</span>
 					</div>
 				</div>
 				<div class="header-button">
-					<a href="#">Any questions?</a>
+					<a href="#">
+						Any questions?
+					</a>
 				</div>
 			</div>
 		</div>
 	</header>
 	<section class="product-container">
 		<div class="product-description container">
-			<span>730<span> satisfied customers today</span></span>
+			<span>
+				730
+				<span>
+					 satisfied customers today
+				</span>
+			</span>
 			<h1>PERFECTLY PURE SKIN</h1>
 			<span class="nutrion">Nutrition for your skin with a beneficial influence</span>
 			<div class="positive-properties">
 				<div class="properties">
 					<img src="../images/check.png" alt="Positive property">
-					<span>Cleaner face within few days</span>
+					<span>
+						Cleaner face within few days
+					</span>
 				</div>
 				<div class="properties">
 					<img src="../images/check.png" alt="Positive property">
-					<span>Easy to apply on skin</span>
+					<span>
+						Easy to apply on skin
+					</span>
 				</div>
 				<div class="properties">
 					<img src="../images/check.png" alt="Positive property">
-					<span>Delivery between 1-3 days</span>
+					<span>
+						Delivery between 1-3 days
+					</span>
 				</div>
 			</div>
 			<img class="product-image" src="../images/cosmetic-cream-tube.png" alt="Cosmetic cream tube">
 			<div class="button-container">
-				<a href="#" class="product-button">BUY NOW 19.99$</a>
-				<span>Includes 12 skin treatments</span>
+				<a href="#" class="product-button">
+					BUY NOW 19.99$
+				</a>
+				<span>
+					Includes 12 skin treatments
+				</span>
 			</div>
 		</div>
 	</section>
@@ -107,6 +143,65 @@
 					</span>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section class="revolution-container">
+		<div class="skin-container container">
+			<div class="skin-content">
+				<h3>
+					JOIN THE SKIN REVOLUTION
+				</h3>
+				<p class="worldwide">
+					Delivery worldwide and happy customers in all parts of the world.
+				</p>
+				<p>
+					We can proudly say that our customers love us. Pureskin have made over 700+ customers happy.
+				</p>
+				<p>
+					We continue to grow which make os able to give you the best service and products.
+				</p>
+				<p class="info">
+					If you have questions regarding our service 
+					<a href="#">
+						info@pureskin.com
+					</a>
+				</p>
+			</div>
+		</div>
+		<div class="map">
+			<div class="map-ball"></div>
+			<div class="map-ball"></div>
+			<div class="map-ball"></div>
+			<div class="map-ball"></div>
+			<div class="map-ball"></div>
+			<div class="map-text">
+				<span>
+					Love it, easy to use and clean face in a few days.
+				</span>
+			</div>
+			<div class="map-text">
+				<span>
+					I got more confident as days past, i can now say i love it.
+				</span>
+			</div>
+		</div>
+	</section>
+	<section class="video-container">
+		<div class="video">
+			<a href="#"><img src="../images/play-btn-icon.png" alt="Play button"></a>
+		</div>
+		<div class="video-content">
+			<h3>
+				SEE HOW IT WORKS
+			</h3>
+			<p>
+				Watch our presentation video on how to use everyday.  Melanie will demonstrate on how to apply on your skin.
+			</p>
+			<!-- <div> -->
+				<a href="#" class="video-button">
+					WATCH VIDEO
+				</a>
+			<!-- </div> -->
 		</div>
 	</section>
 </body>
