Added ingredients container

--- a/html/index.html
+++ b/html/index.html
@@ -197,11 +197,72 @@
 			<p>
 				Watch our presentation video on how to use everyday.  Melanie will demonstrate on how to apply on your skin.
 			</p>
-			<!-- <div> -->
-				<a href="#" class="video-button">
-					WATCH VIDEO
-				</a>
-			<!-- </div> -->
+			<a href="#" class="video-button">
+				WATCH VIDEO
+			</a>
+		</div>
+	</section>
+	<section class="ingredients-container">
+		<div class="ingredients-content container">
+			<h3>
+				PURE SKIN WITH NATURAL INGREDIENTS
+			</h3>
+			<span>
+				We only use the best natural ingredients possible.
+			</span>
+			<div class="ingredients">
+				<img src="../images/cosmetic-cream-tube-mockup-single.png" alt="Cosmetic cream tube">
+				<div class="ingredients-characteristics container">
+					<div class="first-part">
+						<div class="characteristic">
+							<div class="title">
+								<span class="border"></span>
+								<span>
+									ANTI-AGING
+								</span>
+							</div>
+							<p>
+								Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed diam nonu
+							</p>
+						</div>
+						<div class="characteristic">
+							<div class="title">
+								<span class="border"></span>
+								<span>
+									ORGANIC
+								</span>
+							</div>
+							<p>
+								Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed diam nonu
+							</p>
+						</div>
+					</div>
+					<div class="second-part">
+						<div class="characteristic hidden-characteristic">
+							<div class="title">
+								<span class="border"></span>
+								<span>
+									SMOOTHER SKIN
+								</span>
+							</div>
+							<p>
+								Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed diam nonu
+							</p>
+						</div>
+						<div class="characteristic">
+							<div class="title">
+								<span class="border"></span>
+								<span>
+									NUTRION
+								</span>
+							</div>
+							<p>
+								Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed diam nonu
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
