--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Nutrition for your skin with a beneficial influence">
-	<link rel="stylesheet" href="../style/index.css">
+	<link rel="stylesheet" href="../style/index/index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap">
 	<title>PURESKIN</title>
@@ -262,6 +262,32 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section class="order-container">
+		<div class="order-content container">
+			<div class="click">
+				<span>
+					FEW CLICK AWAY
+				</span>
+				<img src="../images/order-imges/sign.png" alt="Click">
+			</div>
+			<div class="payment">
+				<div class="form-title">
+					<div class="location">
+						<img src="../images/order-imges/icon-location.png" alt="Location">
+					</div>
+					<span>
+						ORDER NOW AND GET PURE SKIN
+					</span>
+				</div>
+				<form action="/" method="POST">
+					
+				</form>
+			</div>
+			<div class="flower">
+				<img src="../images/order-imges/flower.png" alt="Flower">
 			</div>
 		</div>
 	</section>
