Added news container

--- a/html/index.html
+++ b/html/index.html
@@ -326,13 +326,33 @@
 							<input type="text" name="zip-code" id="zip-code" maxlength="5" minlength="5" placeholder="_ _ - _ _ _" required>
 						</label>
 					</div>
-					<button>
+					<button name="payment" id="payment">
 						GO TO PAYMENT
 					</button>
 				</form>
 			</div>
 			<div class="flower">
 				<img src="../images/order-imges/flower.png" alt="Flower">
+			</div>
+		</div>
+	</section>
+	<section class="news-container">
+		<div class="news-content container">
+			<img src="../images/news-images/plant.png" alt="Plant">
+			<img src="../images/news-images/leaves.png" alt="Leaves">
+			<div class="news">
+				<h3>
+					WANT NEWS ABOUT OUR PRODUCT?
+				</h3>
+				<label for="mail">
+					<div class="subscribe-container">
+						<input type="text" name="mail" id="mail" maxlength="30" minlength="10" placeholder="Your e-mail" required>
+						<input type="button" name="subscribe" id="subscribe" value="SUBSCRIBE">
+					</div>
+				</label>
+				<span>
+					We dont share your information
+				</span>
 			</div>
 		</div>
 	</section>
