Added pre footer container

--- a/html/index.html
+++ b/html/index.html
@@ -351,8 +351,87 @@
 					</div>
 				</label>
 				<span>
-					We dont share your information
+					We do not share your information
 				</span>
+			</div>
+		</div>
+	</section>
+	<section class="pre-footer-container">
+		<div class="pre-footer-content container">
+			<div class="share-container">
+				<div class="pre-logo-container">
+					<img src="../images/logo.png" alt="Logo">
+					<span>
+						PURE
+					</span>
+					<span>
+						SKIN
+					</span>
+				</div>
+				<span>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a nunc imperdiet odio sodales blandit.
+				</span>
+				<div class="share-buttons">
+					<a href="https://twitter.com">
+						<img src="../images/share/twitter.png" alt="Twitter">
+					</a>
+					<a href="https://www.facebook.com">
+						<img src="../images/share/facebook.png" alt="Facebook">
+					</a>
+					<a href="https://plus.google.com">
+						<img src="../images/share/google.png" alt="Google+">
+					</a>
+					<a href="https://www.pinterest.com">
+						<img src="../images/share/pinterest.png" alt="Pinterest">
+					</a>
+					<a href="https://www.linkedin.com">
+						<img src="../images/share/inkedIn.png" alt="LinkedIn">
+					</a>
+				</div>
+			</div>
+			<div class="pre-footer-nav">
+				<div class="nav-item">
+					<h3>
+						ABOUT
+					</h3>
+					<a href="#">
+						Store locations
+					</a>
+					<a href="#">
+						Partner ships
+					</a>
+					<a href="#">
+						How it works?
+					</a>
+				</div>
+				<div class="nav-item">
+					<h3>
+						TERMS
+					</h3>
+					<a href="#">
+						Privacy police
+					</a>
+					<a href="#">
+						Terms & Conditions
+					</a>
+					<a href="#">
+						Shipping information
+					</a>
+				</div>
+				<div class="nav-item">
+					<h3>
+						SUPPORT
+					</h3>
+					<a href="#">
+						Contact us
+					</a>
+					<a href="#">
+						My account
+					</a>
+					<a href="#">
+						F.A.Q.
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
