--- a/html/index.html
+++ b/html/index.html
@@ -34,9 +34,9 @@
 				<img src="../images/logo.png" alt="Logo">
 				<span>
 					PURE
-					<span>
-						SKIN
-					</span>
+				</span>
+				<span>
+					SKIN
 				</span>
 			</div>
 			<div class="right-header-container">
@@ -435,5 +435,10 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<div class="footer-container container">
+			<span>Copyright 2018 - <a href="#">pureskin.com</a></span>
+		</div>
+	</footer>
 </body>
 </html>
