Made page on bootstrap

--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,98 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="../style/index-style/index.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato&display=swap">
 	<title>Cover letter</title>
 </head>
 <body>
-	
+	<div class="container-lg d-flex flex-column wrapper">
+		<header class="row no-gutters header-container">
+			<div class="align-items-center d-flex flex-column col-12 header-content">
+				<img class="img-fluid mb-4" src="../images/header-container/the_resume.png" alt="The resume">
+				<h1 class="mb-4">GRAPHIC PAINTER</h1>
+				<div class="header-lines"></div>
+			</div>
+		</header>
+		<section class="d-flex flex-wrap justify-content-sm-start main-info-container">
+			<div class="d-flex align-items-center design">
+				<div class="design-background"></div>
+				<span class="design-text">DESIGN POSITION</span>
+			</div>
+			<div class="align-items-felx-start d-flex flex-column justify-content-center contact-data">
+				<span>123 street road</span>
+				<span>sample city</span>
+				<span>sample country</span>
+				<span>post/zip code</span>
+			</div>
+			<div class="d-flex flex-column justify-content-center phone-number">
+				<div class="d-flex align-items-center justify-content-around phone">
+					<img class="img-fluid" src="../images/main-info-container/mobile.png" alt="Mobile phone">
+					<span class="phone-text">+123 456 7890</span>
+				</div>
+				<div class="phone flex">
+					<img class="img-fluid" src="../images/main-info-container/phone.png" alt="Home phone">
+					<span class="phone-text">+123 456 7890</span>
+				</div>
+			</div>
+			<div class="d-flex flex-column web-links justify-content-center">
+				<div class="mail d-flex align-items-center">
+					<img class="img-fluid" src="../images/main-info-container/earth.png" alt="Web site">
+					<span>www.yourwebsite.com</span>
+				</div>
+				<div class="mail d-flex align-items-center">
+					<img class="img-fluid" src="../images/main-info-container/letter.png" alt="Email">
+					<span>companymail@info.com</span>
+				</div>
+			</div>
+		</section>
+		<section class="letter-container flex-grow-1">
+			<div class="row no-gutters">
+				<div class="col-5 col-sm-4">
+				</div>
+				<div class="col-7 col-sm-8 letter">
+					<h2>Dear Ryan Smith,</h2>
+				</div>
+			</div>
+			<div class="row no-gutters">
+				<div class="d-flex flex-column col-5 col-sm-4">
+					<span>Mr. Ryan Smith</span>
+					<span>Executive manager</span>
+					<span>Company Name</span>
+					<span>Town Address</span>
+					<span>City Statemith</span>
+				</div>
+				<div class="col-7 col-sm-8">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<p>
+						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<p>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<p>
+						Exercitation Ut enim ad minim veniam,Ut enim ad minim veniam, quis Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<p>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+					<p>Sincerely,</p>
+				</div>	
+			</div>
+			<div class="row no-gutters">
+				<div class="col-5 col-sm-4">
+				</div>
+				<div class="col-7 col-sm-8">
+					<img class="img-fluid sign" src="../images/letter-container/sign.png" alt="Sign">
+				</div>
+			</div>
+		</section>
+		<footer class="row no-gutters">
+			<div class="col-12 footer-content d-flex justify-content-center">
+				<img class="img-fluid" src="../images/footer-container/footer-logo.png" alt="Footer">
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
