--- a/html/index.html
+++ b/html/index.html
@@ -50,15 +50,17 @@
 			</label>
 			<div class="menu-links">
 				<img src="../images/header-container/logo.png" alt="Logo">
-				<a class="menu-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</a>
-				<a class="menu-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Shop</a>
-				<a class="menu-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Gallery</a>
+				<div class="links">
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</span></a>
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Shop</span></a>
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Gallery</span></a>
+				</div>
 			</div>
 			<div class="button-container">
 				<label class="btn-contact" for="contact-active">
 					<span>CONTACT US</span>
 				</label>
-				<a class="btn-book" href="#">BOOK NOW</a>
+				<a class="btn-book" href="#home">BOOK NOW</a>
 			</div>
 		</div>
 		<header class="header-container">
@@ -72,7 +74,7 @@
 					<span></span>
 				</label>
 				<nav class="navigation">
-					<a class="nav-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</a>
+					<a class="nav-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</a>
 					<a class="nav-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Shop</a>
 					<a class="nav-item" href="#"><img src="../images/header-container/ellipse.png" alt="Eclipse">Gallery</a>
 				</nav>
@@ -88,6 +90,19 @@
 				</div>
 			</div>
 		</header>
+		<div class="home"><a name="home"></a></div>
+		<div class="intorduction-container">
+			<div class="intorduction-content wrapper">
+				<img src="../images/introduction-container/logo-introduction.png" alt="Logo">
+				<p>Our barbershop is a place of style and mutual understanding in which it is pleasant to spend time.</p>
+				<a href="/">BOOK NOW</a>
+			</div>
+		</div>
+		<div class="services-container">
+			<div class="services-content">
+				
+			</div>
+		</div>
 		<div style="width: 100vw; background-color: red; padding-top: 100px;">
 			<h1>hui</h1>
 			<h1>hui</h1>
