Added services block

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap">
 	<link rel="stylesheet" href="../style/index-style/index.css">
 	<title>Hillel-Barber Shop</title>
 </head>
@@ -51,9 +51,9 @@
 			<div class="menu-links">
 				<img src="../images/header-container/logo.png" alt="Logo">
 				<div class="links">
-					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</span></a>
-					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Shop</span></a>
-					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Gallery</span></a>
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Home</a>
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Shop</a>
+					<a class="menu-item" href="#home"><img src="../images/header-container/ellipse.png" alt="Eclipse">Gallery</a>
 				</div>
 			</div>
 			<div class="button-container">
@@ -98,42 +98,68 @@
 				<a href="/">BOOK NOW</a>
 			</div>
 		</div>
-		<div class="services-container">
-			<div class="services-content">
-				
+		<div class="salon-background"></div>
+		<div class="text-services-container">
+			<div class="text-services-content wrapper">
+				<div class="services">
+					<img src="../images/services-container/ellipse-services.png" alt="Eclipse">
+					<span>Our services</span>
+				</div>
 			</div>
 		</div>
-		<div style="width: 100vw; background-color: red; padding-top: 100px;">
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
-			<h1>hui</h1>
+		<div class="services-container">
+			<div class="services-content wrapper">
+				<div class="services-proposition">
+					<div class="services-item">
+						<img src="../images/services-container/scissors.png" alt="Scissors">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+					<div class="services-item">
+						<img src="../images/services-container/bottle.png" alt="Bottle">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+					<div class="services-item">
+						<img src="../images/services-container/trimmer.png" alt="Trimmer">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+					<div class="services-item">
+						<img src="../images/services-container/brush.png" alt="Brush">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+					<div class="services-item">
+						<img src="../images/services-container/hair-dryer.png" alt="Hair dryer">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+					<div class="services-item">
+						<img src="../images/services-container/blade.png" alt="Blade">
+						<div class="proposition">
+							<span>Men's haircut</span>
+							<span>60 min.</span>
+							<span><span class="bold">350</span> / <span class="bold">400</span> / <span class="bold">450</span> ₴</span>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
